<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <!-- 悬浮窗按钮 -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/play_layout"
        android:layout_width="646dp"
        android:layout_height="74dp"
        android:background="#3C664FA3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="4dp">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/suspended_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/image_button_background"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        tools:ignore="ImageContrastCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/child_layout"
        android:layout_width="397dp"
        android:layout_height="325dp"
        android:background="#92000000"
        android:visibility="visible"
        tools:ignore="MissingConstraints,VisualLintBounds"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="84dp">

        <Button
            android:id="@+id/set_key_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:text="@string/set_key_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="60dp"
            android:text="@string/close_frame"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/music_list_view"
            android:layout_width="289dp"
            android:layout_height="326dp"
            tools:layout_editor_absoluteX="111dp"
            tools:layout_editor_absoluteY="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 功能菜单，默认隐藏 -->

</androidx.constraintlayout.widget.ConstraintLayout>
